# TaoServer

./: CMakeLists.txt  README.md  log.txt
Server/: CMakeLists.txt  log.txt
Server/src/private/: log.cpp  util.cpp
Server/src/public/: log.h
src/private/: config.cpp
src/public/: config.h  log.h  singleton.h  util.h
tests/: testConfig.cpp  testLog.cpp
